# voxudio

./: .gitignore  README-en.md  README.md  onnxexp.py  see.py  tcc.py  utils.py  vad.py  x_asr_onnx_infer.py
checkpoint/: speaker_embedding_extractor.onnx  speaker_embedding_extractor.pt
model/: __init__.py  see.py  tcc.py  vad.py
voxudio-rs/: Cargo.toml  README-en.md  README.md  build.rs
voxudio-rs/.codebuddy/.rules/: ProjectRule.mdc
voxudio-rs/examples/: ac.rs  ap.rs  asr.rs  oc.rs  offe.rs  see.rs  ss.rs  tcc.rs  vad.rs
voxudio-rs/examples/android/: Cargo.toml  build.rs  run.bat  run.sh  tcc.rs
voxudio-rs/examples/android/.cargo/: config.toml
voxudio-rs/src/: device.rs  error.rs  knf.rs  lib.rs  model.rs  opus.rs  sonic.rs  utils.rs
voxudio-rs/src/device/: collector.rs  player.rs
voxudio-rs/src/knf/: feature-fbank.cc  feature-fbank.h  feature-mfcc.cc  feature-window.cc  feature-window.h  kiss_fftr.h  knf.cc  knf.h  mel-computations.cc  mel-computations.h  online-feature.cc  online-feature.h  raw.rs  rfft.cc  whisper-feature.cc
voxudio-rs/src/model/: asr.rs  see.rs  tcc.rs  vad.rs
voxudio-rs/src/model/asr/: legacy.rs  tokens.rs
voxudio-rs/src/model/asr/legacy/: tokens.rs
voxudio-rs/src/opus/: raw.rs
voxudio-rs/src/sonic/: raw.rs
voxudio-rs/tests/: test_asr.rs  test_device.rs  test_integration.rs  test_oc.rs  test_offe.rs  test_see.rs  test_sonic.rs  test_tcc.rs  test_vad.rs
