[package]
name = "voxudio"
version = "0.5.1"
edition = "2024"
license = "Apache-2.0"
description = "A real-time audio processing library with ONNX runtime support"
authors = ["mzdk100 <mzdk100@gmail.com>"]
repository = "https://github.com/mzdk100/voxudio"
keywords = ["audio", "processing", "onnx", "real-time", "machine-learning"]

[dependencies]
ndarray = "0.16.1"
rodio = { version = "0.21.1", default-features = false, features = ["mp3", "wav"] }
tokio = {version = "1.47.1", features = ["fs", "sync", "time"]}

[dependencies.ort]
version = "2.0.0-rc.10"
optional = true

[dependencies.cpal]
version = "0.16.0"
optional = true

[build-dependencies]
bindgen = "0.72.1"
cc ="1.2.40"

[dev-dependencies]
anyhow = "1.0.100"
tokio = { version = "1.47.1",features = ["macros", "rt-multi-thread"] }

[[example]]
name = "asr"
required-features = ["model", "knf"]

[[example]]
name = "tcc"
required-features = ["model", "device"]

[[example]]
name = "vad"
required-features = ["model", "device"]

[[example]]
name = "see"
required-features = ["model"]

[[example]]
name = "ap"
required-features = ["device"]

[[example]]
name = "ac"
required-features = ["device"]

[[example]]
name = "oc"
required-features = ["opus"]

[[example]]
name = "offe"
required-features = ["knf"]

[features]
device = ["cpal/oboe-shared-stdcxx"]
model = ["ort/default"]
knf = []
opus = []

[workspace]
members = ["examples/android"]
resolver = "3"
