[package]
name = "voxudio"
version = "0.7.1"
edition = "2024"
license = "Apache-2.0"
description = "A real-time audio processing library with ONNX runtime support"
authors = ["mzdk100 <mzdk100@gmail.com>"]
repository = "https://github.com/mzdk100/voxudio"
keywords = ["audio", "processing", "onnx", "real-time", "machine-learning"]

[dependencies]
ndarray = "0.17.2"
rodio = { version = "0.22.2", default-features = false, features = ["mp3", "wav"] }
tokio = {version = "1.52.3", features = ["fs", "sync", "time"]}

[dependencies.ort]
version = "2.0.0-rc.12"
optional = true

[dependencies.cpal]
version = "0.18.0"
optional = true

[dependencies.async-stream]
version = "0.3.6"
optional = true

[dependencies.futures-util]
version = "0.3.32"
optional = true

[build-dependencies]
bindgen = "0.72.1"
cc ="1.2.63"

[dev-dependencies]
anyhow = "1.0.102"
tokio = { version = "1.52.3",features = ["macros", "rt-multi-thread"] }

[[example]]
name = "asr"
required-features = ["model", "knf"]

[[example]]
name = "tcc"
required-features = ["model", "device"]

[[example]]
name = "vad"
required-features = ["model", "device"]

[[example]]
name = "see"
required-features = ["model"]

[[example]]
name = "ap"
required-features = ["device"]

[[example]]
name = "ac"
required-features = ["device"]

[[example]]
name = "oc"
required-features = ["opus"]

[[example]]
name = "offe"
required-features = ["knf"]

[[example]]
name = "ss"
required-features = ["sonic", "device"]

[features]
device = ["cpal"]
model = ["ort/default", "futures-util/default", "async-stream"]
knf = []
opus = []
sonic = []

[workspace]
members = ["examples/android"]
resolver = "3"
