[package]
name = "voxudio-android"
version = "0.1.0"
edition = "2024"

[package.metadata.android]
apk_name = "voxudio"
use_aapt2 = true
runtime_libs = "libs"

[package.metadata.android.signing.release]
path = "app.jks"
keystore_password = "123456"

[lib]
path = "tcc.rs"
crate-type = ["cdylib"]
test = false

[dependencies]
rodio = { version = "0.20.1", default-features = false, features = ["cpal-shared-stdcxx", "mp3", "wav"] }
tokio = {version = "1.45.1", features = ["rt-multi-thread"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7.0"
mobile-entry-point = "0.1.1"

[dependencies.voxudio]
path = "../../"