[package]
name = "voxudio-android"
version = "0.1.0"
edition = "2024"

[package.metadata.android]
apk_name = "voxudio"
use_aapt2 = true
runtime_libs = "libs"
application.has_code = false

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 36
max_sdk_version = 36

[[package.metadata.android.application.activity]]
name = "android.app.NativeActivity"

[[package.metadata.android.application.activity.meta_data]]
name="android.app.lib_name"
value="voxudio_android"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.VIEW", "android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]

[package.metadata.android.signing.release]
path = "app.jks"
keystore_password = "123456"

[lib]
path = "tcc.rs"
crate-type = ["cdylib"]
test = false

[dependencies]
tokio = {version = "1.45.1", features = ["rt-multi-thread"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7.0"
mobile-entry-point = "0.1.1"

[dependencies.voxudio]
features = ["model", "device"]
path = "../../"